Bug 53251. RecreateFrameForContent() on a 'special' frame need only ReframeContainingBlock(). r=karnaze, sr=attinasi